# integer_matrix_approximation

./: README.md
IMA-R/: DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
IMA-R/R/: IMA.R  integer_matrix_approximation.R
IMA-R/man/: IMA.Rd  IMA_Compute_Init_Scaled.Rd  IMA_Update_Factor.Rd  IMA_init.Rd  IMA_params.Rd
IMA-python/: setup.cfg
IMA-python/IMA/: IMA.py  __init__.py
