[metadata]
name = IMA
version = 0.01
author = Samuel H. Church
author_email = samuelhchurch@gmail.com
description =  Approximates a matrix factorization for integer matrices.
url = https://github.com/shchurch/integer_matrix_approximation
project_urls =
    Bug Tracker = https://github.com/shchurch/integer_matrix_approximation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.6

setup_requires =
    setuptools

install_requires =
    numpy

[options.extras_require]
dev =
    pytest
    black == 22.3.0
    flake8 == 4.0.1
    pre-commit == 2.17.0


[options.packages.find]
where = .

[aliases]
test = pytest [test]

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests